--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
     </div>
 
     <!-- TOP MENU (ONLY PLACE for modules) -->
-    <nav class="menu" aria-label="TitanCore Menu">
-  <a class="menu-btn" href="/index.html">Dashboard</a>
+ <nav class="menu" aria-label="TitanCore Menu">
+  <a class="menu-btn active" href="/index.html">Dashboard</a>
   <a class="menu-btn" href="/contact.html">Contact</a>
   <a class="menu-btn" href="/contract.html">Contract</a>
-  <a class="menu-btn" href="/email.html">Email Routing</a>
+  <a class="menu-btn" href="/routing.html">Email Routing</a>
   <a class="menu-btn" href="/report.html">Report</a>
   <a class="menu-btn" href="/approval.html">Approval</a>
   <a class="menu-btn" href="/omni-system.html">Omni System</a>
@@ -296,7 +296,6 @@
   <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
   <a class="menu-btn" href="/public-portal.html">Public Portal</a>
 </nav>
-
     <!-- 3 COLUMNS -->
     <section class="grid" aria-label="Executive control grid">
 
