--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>TitanCore Executive Control Center</title>
-
+<link rel="stylesheet" href="/styles.css?v=2">
+<script src="/app.js?v=2" defer></script>
   <style>
     :root{
       --bg:#000000;
