--- a/tax-network.html
+++ b/tax-network.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Tax Network • TitanCore</title>
+  <link rel="stylesheet" href="/styles.css?v=2">
+<script src="/app.js?v=2" defer></script>
   <style>
     :root{--bg:#000;--gold:rgba(212,175,55,.95);--gold2:rgba(212,175,55,.28);--green:#00c853;--panel:rgba(0,0,0,.42);--panel2:rgba(0,0,0,.28);}
     *{box-sizing:border-box}
