--- a/agentsystem.html
+++ b/agentsystem.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link rel="stylesheet" href="/styles.css">
-<script src="/app.js" defer></script>
+  <link rel="stylesheet" href="/styles.css?v=2">
+<script src="/app.js?v=2" defer></script>
 </head>
 <body>
   <div class="wrap">
