--- a/email.html
+++ b/email.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore Executive Control Center — Email Routing</title>
-<link rel="stylesheet" href="/styles.css">
-<script src="/app.js" defer></script>
+<link rel="stylesheet" href="/styles.css?v=2">
+<script src="/app.js?v=2" defer></script>
   <style>
     .wrap{max-width:1200px;margin:0 auto;padding:16px}
     .panel{background:rgba(0,0,0,.35);border:1px solid rgba(212,175,55,.35);border-radius:18px;padding:16px;margin-top:14px}
